fixed home page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <p>Click on any part to learn what it is used for</p>
         <a href="cpu.html"><img src="cpu.gif"></a>
         
-        <a href="hardDisk.html>"><img src="hardDisk.gif"></a>
-        <a href="MotherBoard.html>"><img src="motherboard.gif"></a>
-        <a href="OpticalDrive.html>"><img src="opticalDrive.gif"></a>
-        <a href="PowerSupply.html>"><img src="powerSupply.gif"></a>
-        <a href="ram.html>"><img src="ram.gif"></a>
-        <a href="videoCard.html>"><img src="videoCard.gif"></a>
+        <a href="hardDisk.html"><img src="hardDisk.gif"></a>
+        <a href="MotherBoard.html"><img src="motherboard.gif"></a>
+        <a href="OpticalDrive.html"><img src="opticalDrive.gif"></a>
+        <a href="PowerSupply.html"><img src="powerSupply.gif"></a>
+        <a href="ram.html"><img src="ram.gif"></a>
+        <a href="videoCard.html"><img src="videoCard.gif"></a>
         <br>
     <applet code="ComputerParts.class" width=600 height=150>
     </applet>
